# card-games

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirement.txt  requirements.gamerunner.txt  requirements.txt
algorithm/: agent.py
benchmark/: big_two_benchmark.py  bigtwo_benchmark.py  bigtwo_benchmark_multi_agent.py
bigtwo/: __init__.py  bigtwo.py  bigtwo_realtime.py  bigtwo_test.py  preprocessing.py  valid_cards_game.py
bigtwo_client/: client.py
client/: client.py
gamerunner/: __init__.py  analysis.py  big_two_bot.py  bot.py  cmd_line_bot.py  maddpg_runner.py  ppo_bot.py  ppo_runner.py  ppo_runner_test.py  ppo_valid_cards_picker.py  random_bot.py  random_realtime_runner.py  random_runner.py  runner.py  spg_valid_cards_picker.py  tool.py
gamerunner/analysis_result/: README.md
gamerunner/config/: train.yaml  train_parallel.yaml
gamerunner/experiments/: README.md
gamerunner/experiments/2021_04_25_10_10_35/: action_history.txt  config.csv  game_history.txt  training.csv
gamerunner/experiments/2021_04_25_10_43_45/: action_history.txt  config.csv  game_history.txt  training.csv
gamerunner/experiments/2021_04_25_10_50_52/: action_history.txt  config.csv  game_history.txt  training.csv
gamerunner/experiments/2021_04_25_14_08_37/: action_history.txt  config.csv  game_history.txt  training.csv
gamerunner/experiments/2021_05_01_13_19_48/: action_history.txt  config.csv  game_history.txt  training.csv
maddpg/experiments/: train.py
maddpg/maddpg/trainer/: maddpg.py
multiagent/multiagent/: environment.py
playingcards/: __init__.py  card.py
ray_runner/: bigtwo_multi_agent.py  multi_agent_bigtwo_runner.py  ray_custom_util.py
ray_runner/results/: README.md
test/: bigtwo_test.py  ppo_bot_test.py  ppo_runner_test.py
(+25 files in other folders)
