[tool.poetry]
name = "card-games"
version = "0.1.0"
description = ""
authors = ["<8260377+Wal8800@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

pandas = "==1.5.1"
psutil = "==5.8.0"
Pympler = "==0.9"
PyYAML = "==5.4.1"
scipy = "==1.9.3"
tensorflow = "==2.9.1"
tensorflow-probability = "==0.17.0"
opentelemetry-api = "^1.12.0"
opentelemetry-sdk = "^1.12.0"
opentelemetry-exporter-jaeger = "^1.12.0"
Pillow = "==9.0.1"
ray = {version = "2.2", extras = ["rllib"]}
tqdm = "^4.64.1"
scikit-image = "^0.19.3"
imagecodecs = "^2022.8.8"
gym = "0.22"
CairoSVG = "^2.5.2"

[tool.poetry.dev-dependencies]

black = "==22.3.0"
mypy = "==0.991"
pylint = "^2.13.9"
pytest = "^7.1.2"

[tool.isort]
profile = "black"

[tool.mypy]
install_types = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
